# root_serialization

./: CMakeLists.txt  ConfigurationParameters.cc  Cori.md  HDFCxx.h  HDFOutputer.cc  HDFOutputer.h  HDFSource.cc  PHDFBatchEventsOutputer.cc  PHDFBatchEventsOutputer.h  README.md  RNTupleOutputer.h  RootEventOutputerDict.h  RootEventOutputerDict_def.xml  S3Common.cc  S3Common.h  S3Outputer.cc  S3Outputer.h  S3Source.cc  S3Source.h  SerialRNTupleSource.h  SerialTaskQueue.h  SharedSourceBase.h  TaskHolder.h  WaitingTaskList.cc  WaitingTaskList.h  objectstripe.proto  outputerFactoryGenerator.cc  pds_reading.cc  s3conn_local.ini  s3io.md  s3localserver.sh  threaded_io_test.cc  threaded_io_test_CollectiveIO.cc
mpi/: CMakeLists.txt  mpi_threaded_io_test.cc  mpicpp.h
